mbs-studio/ops/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbs-studio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: mbs.nafuralabs.staging
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mbs-studio-web
                port:
                  number: 80
